- fixed for first start and work all api two services
