# six-entities/src/main/java/com/example/six_entities/mapper/UserMapper.java
@@ -2,6 +2,7 @@ package com.example.six_entities.mapper;
 
 import com.example.six_entities.model.User;
 import com.example.six_entities.model.UserDto;
+import com.example.six_entities.model.UserProfileDto;
 import org.mapstruct.Mapper;
 import org.mapstruct.Mapping;
 import org.mapstruct.MappingConstants;
@@ -18,5 +19,9 @@ public interface UserMapper {
     @Mapping(target = "id", ignore = true)
     @Mapping(target = "coupons", ignore = true)
     void updateEntityFromDto(UserDto dto, @MappingTarget User user);
+
+    @Mapping(target = "userProfileDto.loyaltyLevel", source = "loyaltyLevel")
+    @Mapping(target = "userProfileDto.externalBalance", source = "externalBalance")
+    void updateDtoFromProfile(UserProfileDto profile, @MappingTarget UserDto dto);
 }
 
