# user-profile-service/src/main/java/com/example/userprofileservice/controller/UserProfileController.java
@@ -2,21 +2,27 @@ package com.example.userprofileservice.controller;
 
 import com.example.userprofile.api.UserProfileApi;
 import com.example.userprofile.api.dto.UserProfileDto;
+import com.example.userprofileservice.service.UserProfileService;
+import lombok.RequiredArgsConstructor;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RestController;
 
 import java.util.UUID;
 
+@RequiredArgsConstructor
 @RestController
 public class UserProfileController implements UserProfileApi {
 
+    private final UserProfileService userProfileService;
+
     @Override
     public ResponseEntity<UserProfileDto> getUserProfile(UUID userId) {
-        return UserProfileApi.super.getUserProfile(userId);
+        return ResponseEntity.ok(userProfileService.getUserProfile(userId));
     }
 
     @Override
-    public ResponseEntity<UserProfileDto> putUserProfile(UserProfileDto userProfileDto) {
-        return UserProfileApi.super.putUserProfile(userProfileDto);
+    public ResponseEntity<Void> upsertUserProfile(UUID userId, UserProfileDto userProfileDto) {
+        userProfileService.upsertUserProfile(userId, userProfileDto);
+        return ResponseEntity.ok().build();
     }
 }
